<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/spacing_normal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/newbook_category_text"
            android:text="@string/category_book_string" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_title"
                style="@style/edittext_styles"
                android:hint="@string/edittext_hint_title" />

            <EditText
                android:id="@+id/edittext_author"
                style="@style/edittext_styles"
                android:hint="@string/edittext_hint_author" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/newbook_category_text"
            android:text="@string/category_genre_string" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_genre"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/newbook_category_text"
            android:text="@string/category_stock_string" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_price"
                style="@style/edittext_styles"
                android:hint="@string/edittext_price_string"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edittext_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/edittext_hint_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/button_qty_minus_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="-" />

                <Button
                    android:id="@+id/button_qty_plus_one"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="+"
                    android:onClick="addOneQuantity"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            style="@style/newbook_category_text"
            android:text="@string/category_supplier_string" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edittext_supl_name"
                style="@style/edittext_styles"
                android:hint="@string/edittext_hint_supl_name" />

            <EditText
                android:id="@+id/edittext_supl_phone"
                style="@style/edittext_styles"
                android:hint="@string/edittext_hint_supl_phone"
                android:inputType="phone" />

        </LinearLayout>


        <Button
            android:id="@+id/order_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="Order" />

    </LinearLayout>

</LinearLayout>